# Advent_of_Code_2023

Cpp_Advent_of_code_23/: CMakeLists.txt  CMakeSettings.json  Cpp_Advent_of_code_23.sln  Cpp_Advent_of_code_23.vcxproj  Cpp_Advent_of_code_23.vcxproj.filters  main.cpp
Cpp_Advent_of_code_23/2023/: day1.cpp  day1.h  day10.cpp  day10.h  day11.cpp  day11.h  day12.cpp  day12.h  day13.cpp  day13.h  day14.cpp  day14.h  day16.cpp  day16.h  day17.cpp  day17.h  day18.cpp  day18.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h  day8.cpp  day8.h  day9.cpp  day9.h
Cpp_Advent_of_code_23/Interfaces/: IDay.h
Cpp_Advent_of_code_23/Util/: DayFactory.cpp  DayFactory.h  util.cpp  util.h
OldSLNFiels/: Cpp_Advent_of_code_23.vcxproj  Cpp_Advent_of_code_23.vcxproj.filters
Python/Day_1/: main_part_1.py  main_part_2.py
Python/Day_2/: main.py
